extra_manifests/ingress/ingress-prod.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: sod-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "traefik"
    # cert-manager.io/cluster-issuer: letsencrypt-staging
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - nicklas.xyz
    secretName: k3s-letsencrypt-cert
  rules:
  - host: sod.sdu.dk
    http:
      - path: /
        pathType: Prefix
        backend:
          serviceName: nxyz-landingpage
          servicePort: 80
